--- a/using_forms/login.html
+++ b/using_forms/login.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
     <Head>
-      <h1>Reset Password</h1></Head>
+      <h1>Login</h1></Head>
    
     <html>
     <form action="action_page.php" method="post">
 <br>
     <div class="container" >
-      <label for="email"><Email</b></label>
+      <label for="email"><b>Email</b></label>
       <input type="text" placeholder="Enter Email" name="email" required>
   
       <label for="password"><b>Password</b></label>
