--- a/using_forms/Register.html
+++ b/using_forms/Register.html
@@ -17,8 +17,8 @@
   <input type="number" id="age" name="age" required placeholder="age"><br><br>
   <label for="password">Create password</label><br>
   <input type="password" id="password" name="password" required placeholder="Password"><br>
-  <label for="vpassword">Create password</label><br>
-  <input type="vpassword" id="vpassword" name="vpassword" required placeholder="Confirm Password"><br>
+  <label for="password">Confirm Password</label><br>
+  <input type="password" id="password" name="password" required placeholder="Confirm Password"><br>
   <br><br>
   <input type="submit" value="Register">
 </form>
