--- a/using_forms/Register.html
+++ b/using_forms/Register.html
@@ -11,14 +11,14 @@
   <input type="text" id="lname" name="lname" required placeholder="last name"><br>
   <label for="email">Email Address:</label><br>
   <input type="email" id="email" name="email" required placeholder="Email"><br>
-  <label for="Tel">Phone Number:</label><br>
+  <label for="tel">Phone Number:</label><br>
   <input type="tel" id="tel" name="Tel" required placeholder="Phone"><br>
   <label for="age">Age:</label><br>
   <input type="number" id="age" name="age" required placeholder="age"><br><br>
   <label for="password">Create password</label><br>
   <input type="password" id="password" name="password" required placeholder="Password"><br>
-  <label for="password">Confirm Password</label><br>
-  <input type="password" id="password" name="password" required placeholder="Confirm Password"><br>
+  <label for="cpassword">Confirm Password</label><br>
+  <input type="password" id="cpassword" name="cpassword" required placeholder="Confirm Password"><br>
   <br><br>
   <input type="submit" value="Register">
 </form>
